# robotic_arm

./: README.MD  robot.sh
install/: local_setup.sh  setup.sh
install/robotic_arm/share/robotic_arm/: package.sh  package.xml
install/robotic_arm/share/robotic_arm/urdf/: robot_arm_urdf.urdf
log/: latest_build  latest_list
src/moveit_config_robotic_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config_robotic_arm/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  move_group.rviz  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
src/moveit_config_robotic_arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robotic_arm/: package.xml  setup.py
src/robotic_arm/config/: robotic_arm_controllers.yaml
src/robotic_arm/launch/: display.launch.py  launch_hw.launch.py  launch_sim.launch.py  rsp.launch.py
src/robotic_arm/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
src/robotic_arm/models/: robot_arm.urdf.xacro  robot_arm_core.xacro  ros2_control.xacro
src/robotic_arm/urdf/: robotic_arm.csv
src/robotic_arm_hw/: CMakeLists.txt  package.xml  robotic_arm_hw.xml
src/robotic_arm_hw/include/robotic_arm_hw/: arduino_comms.hpp  joint.hpp  robotic_arm_hw.hpp
src/robotic_arm_hw/src/: robotic_arm_hw.cpp
